--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
   
       <div class="form-line">
         <label for="title">*Title: </label>
-        <input type="text" name="title" id="title" required>
+        <input type="text" name="title" id="title" required value="Moby Dick">
         <span class="valid-check"></span>
       </div>
   
       <div class="form-line">
         <label for="author">*Author: </label>
-        <input type="text" name="author" id="author" required>
+        <input type="text" name="author" id="author" required value="Herman Melville">
         <span class="valid-check"></span>
       </div>
   
       <div class="form-line">
         <label for="pages">*Pages: </label>
-        <input type="number" name="pages" id="pages" required>
+        <input type="number" name="pages" id="pages" required value="444">
         <span class="valid-check"></span>
       </div>
   
