--- a/index.html
+++ b/index.html
@@ -1,65 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Library Project</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-  <script src="javascript.js" defer></script>
-</head>
-<body>
-  <h1>My Library</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Library Project</title>
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="javascript.js" defer></script>
+  </head>
+  <body>
+    <h1>My Library</h1>
 
-<div id="book-cards">
-<!-- book cards added with  JS-->
-</div>
+    <div id="book-cards">
+      <!-- book cards added with  JS-->
+    </div>
 
-<div class="button-and-form-section">
-  <!-- button reveals form -->
-  <button class="add-new-book">Add New Book</button>
+    <div class="button-and-form-section">
+      <!-- button reveals form -->
+      <button class="add-new-book">Add New Book</button>
 
-  <!-- form is initially hidden -->
-  <form action="#" method="post" class="hidden">
-    <fieldset>
-      <legend> Please fill out new book info </legend>
-  
-      <div class="form-line">
-        <label for="title">*Title: </label>
-        <input type="text" name="title" id="title" required value="Leiningen Versus the Ants">
-        <span class="valid-check"></span>
-      </div>
-  
-      <div class="form-line">
-        <label for="author">*Author: </label>
-        <input type="text" name="author" id="author" required value="Carl Stephenson">
-        <span class="valid-check"></span>
-      </div>
-  
-      <div class="form-line">
-        <label for="pages">*Pages: </label>
-        <input type="number" name="pages" id="pages" required value="33">
-        <span class="valid-check"></span>
-      </div>
-  
-      <div class="form-line">
-        <input type="checkbox" name="haveRead" id="haveRead">
-        <label for="haveRead">Already read</label>
-      </div>
-  
-      <div class="form-line">
-        <label for="notes">Notes: </label>
-        <textarea name="notes"
-        id="notes"
-        placeholder="Add your personal notes here..."
-        rows="5" cols="60"></textarea>
-      </div>
-      <button type="submit" id="submit-book-btn">Submit Book</button>
-    </fieldset>
-  </form>
-</div>
+      <!-- form is initially hidden -->
+      <form class="hidden">
+        <fieldset>
+          <legend>Please fill out new book info</legend>
 
-<div class="footer credits">Photo by <a href="https://unsplash.com/@eddrobertson?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank" rel="noopener noreferrer">Ed Robertson</a> on <a href="https://unsplash.com/photos/assorted-title-book-lot-eeSdJfLfx1A?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank" rel="noopener noreferrer">Unsplash</a></div>
+          <div class="form-line">
+            <label for="title">*Title: </label>
+            <input
+              type="text"
+              name="title"
+              id="title"
+              required
+              value="Leiningen Versus the Ants"
+              minlength="5"
+              maxlength="50"
+            />
+            <span class="valid-check"></span>
+          </div>
 
-</body>
+          <div class="form-line">
+            <label for="author">*Author: </label>
+            <input
+              type="text"
+              name="author"
+              id="author"
+              required
+              value="Carl Stephenson"
+              minlength="3"
+              maxlength="30"
+            />
+            <span class="valid-check"></span>
+          </div>
+
+          <div class="form-line">
+            <label for="pages">*Pages: </label>
+            <input
+              type="number"
+              name="pages"
+              id="pages"
+              required
+              value="33"
+              min="1"
+              max="999"
+            />
+            <span class="valid-check"></span>
+          </div>
+
+          <div class="form-line">
+            <input type="checkbox" name="haveRead" id="haveRead" />
+            <label for="haveRead">Already read</label>
+          </div>
+
+          <div class="form-line">
+            <label for="notes">Notes: </label>
+            <textarea
+              name="notes"
+              id="notes"
+              placeholder="Add your personal notes here..."
+              rows="5"
+              cols="60"
+            ></textarea>
+          </div>
+          <button id="submit-book-btn">Submit Book</button>
+        </fieldset>
+      </form>
+    </div>
+
+    <div class="footer credits">
+      Photo by
+      <a
+        href="https://unsplash.com/@eddrobertson?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Ed Robertson</a
+      >
+      on
+      <a
+        href="https://unsplash.com/photos/assorted-title-book-lot-eeSdJfLfx1A?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash"
+        target="_blank"
+        rel="noopener noreferrer"
+        >Unsplash</a
+      >
+    </div>
+  </body>
 </html>
